--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   freezed: ^2.1.1
   freezed_annotation: ^2.1.0
   go_router: ^6.0.6
+  firebase_core: ^2.15.0
   hashids2: ^2.0.0
   hooks_riverpod: ^2.0.2
   image_cropper: ^3.0.1
