--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "flutter-task-5"
-  }
+    "default": "flutter-task-5",
+    "What alias do you want to use for this project? (e.g. staging) ": "flutter-task-7"
+  },
+  "targets": {},
+  "etags": {}
 }
