--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.15
   url_launcher: ^6.1.6
   uuid: ^3.0.7
+  cloud_firestore: ^4.8.4
 
 dev_dependencies:
   build_runner: ^2.4.6
